[package]
name = "leveldb-parser-gui"
version = "0.4.1"
description = "A Tauri App"
authors = ["Alexander Hübert"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "leveldb_parser_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

leveldb-parser-lib = { path = "../../leveldb-parser-lib" }
tauri-plugin-clipboard-manager = "2"
rayon = "1.10.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
